(1) 加入 ICam.IsSim() 來代替 Univeral.IsNoUseCCD (2) 簡單修改 _autolayout

--- a/Eazy Project III/Eazy Project III/NLog.config
+++ b/Eazy Project III/Eazy Project III/NLog.config
@@ -31,7 +31,7 @@ NLog.config 設定參考  (noted by LeTian Chang)
 
   <!--[變數]-->
   <variable name="myLogPath" value="D:/EVENTLOG/Nlogs"/>
-  <variable name="myFormName" value="FormNLog"/>
+  <variable name="myFormName" value="MainForm"/>
   <variable name="myRichTextBoxName" value="richTextBox1"/>
   <!--[變數]-->
   <variable name="fmtAll" value="${time}, ${level:format=FirstCharacter}, ${threadid}, ${message:withexception=true}"/>
