紅斑連續補償 fine 02 coretronics dll 異常

--- a/Eazy Project III/JzDisplay/JzDisplay.csproj
+++ b/Eazy Project III/JzDisplay/JzDisplay.csproj
@@ -71,12 +71,13 @@
     <Reference Include="JetEazy">
       <HintPath>..\JetEazy\bin\Debug\JetEazy.dll</HintPath>
     </Reference>
-    <Reference Include="MoveGraphLibrary">
-      <HintPath>..\JzASN\bin\Debug\MoveGraphLibrary.dll</HintPath>
+    <Reference Include="MoveGraphLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DLLS\MoveGraphLibrary.dll</HintPath>
     </Reference>
     <Reference Include="ProjectForAllinone, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\ProjectForAllinone.dll</HintPath>
+      <HintPath>..\DLLS\ProjectForAllinone.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
