--- a/Eazy Project III/Eazy Project III/Eazy Project III.csproj
+++ b/Eazy Project III/Eazy Project III/Eazy Project III.csproj
@@ -45,6 +45,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\JzDisplay\bin\Debug\MoveGraphLibrary.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.7.12\lib\net45\NLog.dll</HintPath>
     </Reference>
@@ -200,9 +203,10 @@
     <Compile Include="ZxCore3\GdxCore.cs" />
     <Compile Include="ZxCore3\Model\GdxGlobal.cs" />
     <Compile Include="ZxCore3\Model\GdxMotorCoordsTransform.cs" />
+    <Compile Include="ZxCore3\Model\GdxLaserCenterCompensator.cs" />
     <Compile Include="ZxCore3\Model\Victor_Gaara_Bridges\GdxFacade.cs" />
     <Compile Include="ZxCore3\Model\Victor_Gaara_Bridges\GdxFacadeIO.cs" />
-    <Compile Include="ZxCore3\Model\Victor_Gaara_Bridges\GdxIni.cs" />
+    <Compile Include="ZxCore3\Model\Victor_Gaara_Bridges\GdxFacadeIni.cs" />
     <Compile Include="ZxCore3\Utils\QVector.cs" />
     <Compile Include="ZxCore3\Utils\QxConvert.cs" />
     <Compile Include="GlobalSpace\Enums.cs" />
