(1) 統合使用 AxisUnitConvert 進行馬達單位尺度換算 (2) 使用 AxisUnitConvert 規範 馬達精度 與 單步最大補償 之設定 (3) 加入註解, 與 整理 代碼寫作

--- a/Eazy Project III/Eazy Project III/Eazy Project III.csproj
+++ b/Eazy Project III/Eazy Project III/Eazy Project III.csproj
@@ -199,6 +199,7 @@
     <Compile Include="ZxCore3\Drivers\IO\Vender_HCFA\GxIoAddress.cs" />
     <Compile Include="ZxCore3\Drivers\IO\Victor_Gaara_Bridges\GdxIoAddressConvertor.cs" />
     <Compile Include="ZxCore3\Drivers\Laser\Interface\IxLaser.cs" />
+    <Compile Include="ZxCore3\Drivers\Laser\Sim\GdxLaserSim.cs" />
     <Compile Include="ZxCore3\Drivers\Laser\Victor_Gaara_Bridges\GdxLaser.cs" />
     <Compile Include="ZxCore3\GdxCore.cs" />
     <Compile Include="ZxCore3\Model\GdxGlobal.cs" />
