--- a/Eazy Project III/Eazy Project III/Eazy Project III.csproj
+++ b/Eazy Project III/Eazy Project III/Eazy Project III.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;OPT_LETIAN_DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;xOPT_LETIAN_DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
