--- a/Eazy Project III/Eazy Project III/NLog.config
+++ b/Eazy Project III/Eazy Project III/NLog.config
@@ -32,7 +32,7 @@ NLog.config 設定參考  (noted by LeTian Chang)
   <!--[變數]-->
   <variable name="myLogPath" value="D:/EVENTLOG/Nlogs"/>
   <variable name="myFormName" value="FormNLog"/>
-  <variable name="myRichTextBoxName" value="richTextBox1"/>
+  <variable name="myRichTextBoxName" value="richTextBox1x"/>
   <!--[變數]-->
   <variable name="fmtAll" value="${time}, ${level:format=FirstCharacter}, ${threadid}, ${message:withexception=true}"/>
   <variable name="fmtErr" value="${time}, ${level:format=FirstCharacter}, ${threadid}, ${logger}, ${message:withexception=true}"/>
