--- a/Eazy Project III/Eazy Project III/NLog.config
+++ b/Eazy Project III/Eazy Project III/NLog.config
@@ -30,7 +30,7 @@ NLog.config 設定參考  (noted by LeTian Chang)
   </extensions>
 
   <!--[變數]-->
-  <variable name="myLogPath" value="D:/EVENTLOG/Nlogs"/>
+  <variable name="myLogPath" value="D:/EVENTLOG/S3/Nlogs"/>
   <variable name="myFormName" value="FormNLog"/>
   <variable name="myRichTextBoxName" value="richTextBox1x"/>
   <!--[變數]-->
