--- a/Eazy Project III/JetEazy/JetEazy.csproj
+++ b/Eazy Project III/JetEazy/JetEazy.csproj
@@ -9,34 +9,39 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JetEazy</RootNamespace>
     <AssemblyName>JetEazy</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;OPT_LETIAN_AUTO_LAYOUT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;OPT_LETIAN_AUTO_LAYOUT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HslCommunication">
       <HintPath>..\DLLS\HslCommunication.dll</HintPath>
     </Reference>
-    <Reference Include="JetEazy.QUtility">
-      <HintPath>..\DLLS\JetEazy.QUtility.dll</HintPath>
+    <Reference Include="JetEazy.QUtility, Version=1.0.9.10, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files\Common Files\JetEazy\JetEazy.QUtility.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="MvCameraControl.Net">
@@ -52,9 +57,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Drawing.Common">
-      <HintPath>..\..\..\00AVS2019PROJECT\AnimatedGif-master\AnimatedGif.Demo\bin\Debug\System.Drawing.Common.dll</HintPath>
-    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -77,7 +79,7 @@
     </Compile>
     <Compile Include="CCDSpace\CAMERAClass.cs" />
     <Compile Include="CCDSpace\CAM_HIKVISION.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="NumericUpDownTypeConverter.cs" />
     <Compile Include="ControlSpace\CCDClass.cs" />
     <Compile Include="ControlSpace\COMClass.cs" />
     <Compile Include="ControlSpace\EventClass.cs" />
